--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/http": "4.1.2",
     "@angular/platform-browser": "4.1.2",
     "@angular/platform-browser-dynamic": "4.1.2",
+    "@ionic-native/camera": "^3.10.3",
     "@ionic-native/core": "3.7.0",
     "@ionic-native/splash-screen": "3.7.0",
     "@ionic-native/status-bar": "3.7.0",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^4.0.0-rc.0",
+    "cordova-plugin-camera": "^2.4.1",
+    "firebase": "^4.0.0",
     "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
@@ -32,8 +36,14 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.2.1",
     "@ionic/cli-plugin-ionic-angular": "1.2.0",
     "typescript": "2.3.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {}
+    }
+  }
 }
